# pharmacy_system

./: .gitignore  LICENSE  Projeto DB Farmácia Ronisley.sql  README.md  jinpdv.sql
pharmacy_api/: pyproject.toml
pharmacy_api/app/DB/: database.py  get_db.py
pharmacy_api/app/api/: main.py
pharmacy_api/app/models/: models.py
pharmacy_api/app/routes/: produto_routes.py
pharmacy_api/app/schemas/: Produto_Schema.py
pharmacy_api/fastapi/: pyvenv.cfg
