[project]
name = "pharmacy-api"
version = "0.1.0"
description = "API de gerenciamento de farmácia com foco em estoque, vendas e logística, preparada para consumo por aplicações frontend."
authors = [
    {name = "josimar lourenço dev",email = "josimarlourencodev@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "mysql-connector-python (>=9.6.0,<10.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "pharmacy-api"
packages = [{ include = "app" }]
